styles.css
:root {
    --text-color: #cdcdcd;
    --physics-topic-color: rgb(36, 113, 255);
    --mathematics-topic-color: rgb(255, 71, 58);
    --biology-topic-color: rgb(103, 255, 65);
    --chemistry-topic-color: rgb(235, 235, 49);
    --computing-topic-color: rgb(90, 215, 253);
    --psychology-topic-color: rgb(175, 46, 226);
    --linguistics-topic-color: rgb(203, 132, 218);
    --philosophy-topic-color: rgb(163, 163, 163);
}

* {
    box-sizing: border-box;
}

a {
    background-color: rgba(0, 0, 0, 0);
    color: rgb(94, 94, 233);
    text-transform: none;
    text-decoration: underline;
}

h1 {
    color: #fefefe;
    margin-top: 20px;
    margin-bottom: 10px;
    margin-right: 0px;
    margin-left: 0px;
    font-size: 38px;
    font-weight: 700;
    line-height: 44px;
    display: block;
    margin-block-start: 0.67em;
    margin-block-end: 0.67em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    text-align: center;
}

h1.articleTitle {
    margin-top: 10px;
    margin-bottom: 24px;
}

h2 {
    font-size: 24px;
    padding-top: 0px;
    margin-bottom: 8px;
    justify-self: left;
}

h3 {
    color: #ffffff;
    margin-top: 20px;
    margin-bottom: 10px;
    font-size: 28px;
    font-weight: 500;
    line-height: 30px;
}

button {
    background-color: rgba(0, 0, 0, 0);
    font-family: 'Rubik', sans-serif;
    cursor: pointer;
}

.jeffBody {
    background-color: #030303;
    color: var(--text-color);
    font-family: 'Rubik', sans-serif;
    font-size: 18px;
    font-weight: 300;
    line-height: 32px;
    min-height: 100%;
    margin: 0;
    display: block;
}

.jeffHeader {
    border-bottom: 1px solid #181818;
    background-color: #000000;
    flex-direction: column;
    align-items: center;
    height: 10%;
    padding-left: 3%;
    padding-right: 3%;
    display: flex;
    position: fixed;
    inset: 0% 0% auto;
}

.jeffMobileWarning {
    margin-top: 20px;
    margin-bottom: 10px;
    display: none;
}

@media (max-width: 950px) {
    .jeffMobileWarning {display: block;}
}

.jeffNavigationContainer {
    justify-content: space-between;
    background-color: #000000;
    align-items: center;
    width: 100%;
    max-width: 1400px;
    height: 100%;
    min-height: 85px;
    margin-left: auto;
    margin-right: auto;
    display: flex;
}

.jeffHomeButtonContainer {
    align-items: center;
    width: 50%;
    display: flex;
    flex: 0 2 auto;
}

.jeffHomeButton {
    margin-top: 7px;
    margin-right: 44px;
    float: left;
    color: rgb(52, 52, 52);
    position: relative;
    text-decoration: none;
}

.jeffNavigation {
    justify-content: flex-end;
    align-items: center;
    height: 100%;
    display: flex;
    position: static;
    flex: 0 1 auto;
    float: right;
}

.jeffNavigationButton {
    color: #ffffff;
    vertical-align: top;
    text-align: left;
    margin-left: 0px;
    margin-right: 0px;
    font-size: 28px;
    flex: 0 0 auto;
    display: inline-block;
    position: relative;
    padding: 20px;
    text-decoration: none;
}

.jeffCaption {
    font-size: 16px;
    line-height: 20px;
}

.jeffAttribution {
    font-size: 12px;
    line-height: 12px;
    margin-top: 0px;
    padding-top: 0px;
    padding-bottom: 8px;
}

.jeffIntroSection {
    margin-top: 220px;
}

.jeffAboutSection {
    min-height: 60vh;
}

.jeffHorizontalContainer {
    max-width: 1300px;
    min-width: 700px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 32px;
    padding-right: 32px;
    text-align: center;
}

.jeffTextContainer {
    justify-self: center;
    min-width: 450px;
    max-width: 1100px;
}

.jeffArticleParagraph {
    text-align: left;
    margin-bottom: 24px;
    max-width: 900px;
}

.jeffSubtitle {
    color: #dddddd;
    justify-self: center;
    font-size: 18px;
    font-weight: 300;
    line-height: 32px;
}

.jeffFeaturedSection {
    padding-top: 60px;
}

.jeffSectionTitleContainer {
    margin-top: 16px;
    margin-bottom: 12px;
    justify-content: space-between;
    align-items: baseline;
    max-width: 1300px;
    display: flex;
}

.jeffSocialsContainer {
    margin-top: 20px;
    margin-bottom: 40px;
}

.jeffSocialLink {
    align-items: center;
    transition: all .3s;
    color: #dddddd;
    padding: 8px;
    border: 1px solid rgb(76, 49, 230);
    border-radius: 8px;
    text-decoration: none;
}

.jeffSocialLink:hover {
    color: #aaaaaa;
}

.jeffFeaturedArticleLink {
    align-items: stretch;
    min-height: 200px;
    max-height: 400px;
    display: flex;
    position: relative;
    text-decoration: none;
    max-width: 100%;
}

.jeffBigArticlePreview {
    background-image: linear-gradient(rgb(35, 35, 35), rgb(25, 25, 25));
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
    align-self: stretch;
    width: 70%;
    min-width: 400px;
    flex: 0 1 auto;
    padding: 32px;
}

.jeffTopic {
    color: var(--physics-topic-color);
    background-color: rgba(0, 0, 0, 0);
    letter-spacing: 0px;
    text-transform: none;
    text-align: left;
    align-self: auto;
    line-height: 28px;
    border: 3px solid rgb(150, 150, 200);
    border-bottom-width: 2px;
    margin-left: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 0px;
    padding-bottom: 5px;
    font-size: 28px;
    font-weight: 500;
    border-style: none;
    border-radius: 0px;
    border-width: 1px;
}

.jeffFeaturedArticleHeading {
    margin-top: 16px;
    padding-bottom: 5px;
    font-size: 40px;
    line-height: 44px;
    text-decoration: none;
    text-align: left;
}

.jeffDateBig {
    color: #dddddd;
    padding-top: 14px;
    padding-bottom: 0px;
    font-size: 24px;
    text-decoration: none;
    text-align: left;
}

.jeffDateSmall {
    color: #dddddd;
    padding-bottom: 18px;
    font-size: 18px;
    text-decoration: none;
    text-align: left;
}

.jeffDate {
    color: #dddddd;
    font-size: 24px;
    font-weight: 400;
    padding-top: 0px;
    padding-bottom: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
    text-decoration: none;
    text-align: center;
}

.jeffFeaturedImageBig {
    width: 30%;
    object-fit: cover;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    justify-content: center;
    align-self: auto;
    align-items: center;
    min-height: 286px;
    max-height: 360px;
    position: relative;
    overflow: hidden;
}

.jeffTeaser {
    color: var(--text-color);
    letter-spacing: .6px;
    line-height: 24px;
    text-align: left;
}

.jeffFooter {
    border-top: 1px solid #181818;
    padding-top: 40px;
    margin-top: 20px;
    padding-bottom: 30px;
}

.jeffArticleList {
    color: #000000;
    display: flex;
    flex-direction: column;
}

.jeffArticleListContainer {
    min-height: 60vh;
    margin-top: 180px;
}

.jeffArticleListItem {
    padding-bottom: 20px;
}

.jeffArticleLink {
    align-items: stretch;
    height: 220px;
    display: flex;
    position: relative;
    text-decoration: none;
    max-width: 100%;
}

.jeffAnnouncementLink {
    align-items: stretch;
    height: 108px;
    display: flex;
    position: relative;
    text-decoration: none;
    max-width: 100%;
}

.jeffSmallArticlePreview {
    background-image: linear-gradient(rgb(35, 35, 35), rgb(25, 25, 25));
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
    align-self: stretch;
    width: 80%;
    flex: 0 1 auto;
    padding: 32px;
}

.jeffAnnouncementPreview {
    background-image: linear-gradient(rgb(35, 35, 35), rgb(25, 25, 25));
    border-radius: 8px;
    align-self: stretch;
    width: 100%;
    flex: 0 1 auto;
    padding-top: 16px;
    padding-bottom: 0px;
    padding-left: 32px;
    padding-right: 32px;
    margin-bottom: 0px;
}

.jeffTopicContainer {
    flex-wrap: nowrap;
    align-items: flex-start;
    display: flex;
    justify-items: center;
}

.jeffTopicSmall {
    background-color: rgba(0, 0, 0, 0);
    letter-spacing: 0px;
    text-transform: none;
    text-align: left;
    align-self: auto;
    line-height: 18px;
    border: 3px solid rgb(150, 150, 200);
    border-bottom-width: 2px;
    margin-left: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 0px;
    padding-bottom: 0px;
    font-size: 18px;
    font-weight: 500;
    border-style: none;
    border-radius: 0px;
    border-width: 1px;
}

.jeffArticleHeadingSmall {
    margin-top: 8px;
    margin-bottom: 5px;
    font-size: 24px;
    text-decoration: none;
    text-align: left;
}

.jeffArticleImageSmall {
    width: 20%;
    object-fit: cover;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    justify-content: center;
    align-self: stretch;
    align-items: center;
    max-height: 100%;
    position: relative;
    overflow: hidden;
}

.jeffPageButtonContainer {
    flex-wrap: nowrap;
    align-items: flex-start;
    margin-top: 20px;
    justify-content: center;
    display: flex;
}

.jeffPageButton {
    color: #ffffff;
    background-color: #000000;
    margin-left: 5px;
    margin-right: 5px;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 5px;
    padding-bottom: 5px;
    display: block;
    border: 3px solid rgb(153, 68, 202);
    text-align: center;
    white-space: nowrap;
    border-radius: 12px;
    align-self: auto;
    font-size: 16px;
    font-weight: 400;
    line-height: 36px;
}

.jeffArticle {
    margin-top: 180px;
    line-height: 28px;
    min-height: 60vh;
    min-width: 400px;
    max-width: 1600px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    padding-left: 40px;
    padding-right: 40px;
}

.jeffAnnouncement {
    max-width: 1000px;
}

.jeffArticleColumnContainer {
    text-align: left;
    justify-content: center;
    display: flex;
    flex-direction: row;
    min-width: 1000px;
}

.jeffArticleImage {
    border-radius: 10px;
    max-width: 420px;
    border: 3px solid rgb(93, 101, 216);
    padding: 0px;
    align-self: stretch;
    object-fit: cover;
    justify-content: center;
}

.jeffArticleImageContainer {
    justify-content: center;
    justify-self: center;
    align-self: center;
    padding-left: 30px;
    padding-right: 0px;
    padding-top: 10px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 20px;
    max-width: 450px;
}

.jeffArticleImagesContainer {
    display: flex;
    flex-direction: column;
    margin-left: 30px;
    margin-right: 30px;
    max-width: 450px;
    justify-items: center;
    align-items: center;
}

#PrevButton {
    display: none;
}

#NextButton {
    display: none;
}

